2008-11-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: With excessive maintenance releases, the library
	age portion of MAGICK_LIB_VERSION was overflowing its allotted
	space.  This resulted in 1.1.X releases reporting the wrong
	MagickLibVersion as of 1.1.10.  Fix this by supporting up to 99
	values for each field.

2008-11-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Fix passing the --with-windows-font-dir option via
	DISTCHECK_CONFIG_FLAGS.
	* magick/command.c (ConjureImageCommand): Return status was
	inverted so one was returned for command success rather than zero.

2008-11-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/color.c (FuzzyColorMatch): If fuzz is zero then
	completely use the result of ColorMatch() rather than entering
	unnecessary expensive code.

2008-10-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am: The Magick++ build was supposed to be optional. Now
	it is.

2008-10-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (SetNexus): Make staging buffer memset()
	conditional in order to dramatically diminish impact to small
	accesses.  This memset() only exists to make valgrind happy.

2008-10-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Fix progress monitor for the case
	of reading planar stripped images.

2008-10-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImage): Using +page now resets image
	page offsets as documented for convert and mogrify.

2008-09-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/conjure.imdoc: Applied patches from Max at hohenegger.eu to
	mention previously undocumented elements and to provide a
	composition example.

2008-09-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/msl.c: Applied patches from Max at hohenegger.eu which
	fix a MSL parsing error related to gamma, and erroneous text