@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2008-11-10  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/msl.c: Fix bug with attributes becoming appended to
+        themselves.  Resolves SF issue 2255754.
+
+</UL>
+<p>
 2008-11-03  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
