@@ -1,3 +1,8 @@
+2008-11-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/msl.c: Fix bug with attributes becoming appended to
+	themselves.  Resolves SF issue 2255754.
+
 2008-11-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* configure.ac: With excessive maintenance releases, the library
